--- a/project-mesa/Jenkinsfile
+++ b/project-mesa/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
 
-properties([
+options([
     parameters([
         [$class: 'ChoiceParameter', 
             choiceType: 'PT_SINGLE_SELECT', 
