--- a/project-mesa/Jenkinsfile
+++ b/project-mesa/Jenkinsfile
@@ -19,7 +19,7 @@ properties([
                     classpath: [], 
                     sandbox: false, 
                     script: 
-                        'return["Dev","QA","Stage","Prod"]'
+                        'return[\'Dev\',"\'QA"\']'
                 ]
             ]
         ]
