Fix mesa script

--- a/project-mesa/Jenkinsfile
+++ b/project-mesa/Jenkinsfile
@@ -19,7 +19,9 @@ properties([
                     classpath: [], 
                     sandbox: false, 
                     script: 
-                        'return[\'Dev\',"\'QA"\']'
+                        '''
+                        |return['Dev','QA']
+                        |'''.stripMargin()
                 ]
             ]
         ]
