--- a/project-mesa-ng/Jenkinsfile
+++ b/project-mesa-ng/Jenkinsfile
@@ -25,11 +25,13 @@ parameters {
 
     stages {
         stage('Build') {
-            script {
-                // Dont trigger the rest of the script if pulled from Github
-                if (!currentBuild.getBuildCauses('jenkins.branch.BranchEventCause').isEmpty()) {
-                    currentBuild.result = 'ABORTED';
-                    return;
+            steps {
+                script {
+                    // Dont trigger the rest of the script if pulled from Github
+                    if (!currentBuild.getBuildCauses('jenkins.branch.BranchEventCause').isEmpty()) {
+                        currentBuild.result = 'ABORTED';
+                        return;
+                    }
                 }
             }
             steps {
