--- a/project-mesa-ng/Jenkinsfile
+++ b/project-mesa-ng/Jenkinsfile
@@ -24,15 +24,20 @@ parameters {
 }
 
     stages {
-        stage('Build') {
+        stage('Check') {
+            when { not { triggeredBy 'SCMTrigger' } }
             steps {
                 script {
                     // Dont trigger the rest of the script if pulled from Github
-                    if (!currentBuild.getBuildCauses('jenkins.branch.BranchEventCause').isEmpty()) {
                         currentBuild.result = 'ABORTED';
                         return;
-                    }
                 }
+            }
+        }
+
+        stage('Build') {
+            steps {
+
                 echo 'Building..'
             }
         }
